AUTOMAKE_OPTIONS = subdir-objects
#ACLOCAL_AMFLAGS = -I m4

bin_PROGRAMS = rfswitch
rfswitch_SOURCES = src/main.cpp \
                   src/record.cpp  src/record.h \
                   src/switch.cpp  src/switch.h \
                   src/Sampler.cpp src/Sampler.h \
                   src/Code.cpp    src/Code.h

dist_noinst_SCRIPTS = autogen.sh
